--- a/css/main.css
+++ b/css/main.css
@@ -1,53 +1,21 @@
-
-.header {
-    background: #92C47C;
-    color: white;
-    font-size: 20px;
-    text-align: center;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    width: 70%;
-    margin: 150px;
+.container {
+    font-family: comic sans ms;
+    display: grid;
+    justify-content: center;
 }
 
-.list {
-    color: #FF9B06;
-    font-size: 30px;
+h2 {
+background-color: #92C47C;
+color: white;
 }
+.ol {
+    color: orange;
+}
+input {
+    border: 5px solid #92C47C;
+}
+
 .button {
     border: 5px solid #92C47C;
-    height: 64px;
-    width: 10%;
-    margin-bottom: 20px;
-    font-size: 35px
-    ;
+    color: #92C47C
 }
-.addskill {
-    border: 5px solid #92C47C;
-    color: #92C47C;
-    font-size: 35px;
-    width: 50%;
-    height: 50px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-}
-.main {
-    margin-top: 200px;
-    margin-left: 25%;
-    margin-right: 25%;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
-
-
-
-
-table, .top, .middle, .bottom {
-    padding: 30px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-}
-.text {
-    background-color: #E06466;
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-}
-
